@@ -11,22 +11,28 @@
     :copyright: 2010 by tipfy.org.
     :license: BSD, see LICENSE.txt for more details.
 """
+import mimetypes
 import os
 import sys
+import zipfile
+
+from werkzeug.wrappers import BaseResponse as Response
 
 
 def debugger_wsgi_middleware(app):
-    apply_monkeypatches()
-    from werkzeug import DebuggedApplication
+    DebuggedApplication = get_debugged_application()
     return DebuggedApplication(app, evalex=True)
 
 
 def get_template(filename):
     """Replaces ``werkzeug.debug.utils.get_template()``."""
-    from tipfy.template import Loader
-    loader = Loader(os.path.abspath(os.path.join(os.path.dirname(__file__),
-        'templates')))
-    return loader.load(filename)
+    from tipfy.template import Loader, ZipLoader
+    try:
+        loader = Loader(os.path.join(os.path.dirname(__file__), 'templates'))
+        return loader.load(filename)
+    except IOError, e:
+        loader = ZipLoader('lib/dist.zip', 'tipfy/debugger/templates')
+        return loader.load(filename)
 
 
 def render_template(filename, **context):
@@ -34,7 +40,27 @@ def render_template(filename, **context):
     return get_template(filename).generate(**context)
 
 
-def apply_monkeypatches():
+def get_debugged_application():
+    def get_resource_with_zip(self, request, filename):
+        """Return a static resource from the shared folder."""
+        response = get_resource(self, request, filename)
+        if response.status_code != 404:
+            return response
+
+        mimetype = mimetypes.guess_type(filename)[0] or \
+            'application/octet-stream'
+
+        try:
+            filepath = os.path.join('werkzeug', 'debug', 'shared', filename)
+            f = zipfile.ZipFile('lib/dist.zip', 'r')
+            response = Response(f.read(filepath), mimetype=mimetype)
+            f.close()
+            return response
+        except:
+            pass
+
+        return Response('Not Found', status=404)
+
     def seek(self, n, mode=0):
         pass
 
@@ -52,3 +78,10 @@ def apply_monkeypatches():
     from werkzeug.debug.console import HTMLStringO
     HTMLStringO.seek = seek
     HTMLStringO.readline = readline
+
+    # Fallback to load resources from zip in case libraries are zipped.
+    from werkzeug import DebuggedApplication
+    get_resource = DebuggedApplication.get_resource
+    DebuggedApplication.get_resource = get_resource_with_zip
+
+    return DebuggedApplication
